--- a/charts/supabase/values.yaml
+++ b/charts/supabase/values.yaml
@@ -18,9 +18,9 @@ secret:
   # Anon & Service key: Studio, Storage, Kong
   # JWT Secret: Analytics, Auth, Rest, Realtime, Storage
   jwt:
-    anonKey: ""
-    serviceKey: ""
-    secret: ""
+    anonKey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.ewogICJyb2xlIjogImFub24iLAogICJpc3MiOiAic3VwYWJhc2UiLAogICJpYXQiOiAxNzI1MjE3MjAwLAogICJleHAiOiAxODgyOTgzNjAwCn0.xjyobjt-oorIK7dbaO4CKJlrR1vLfB0k3kQVaTaRDEo"
+    serviceKey: "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.ewogICJyb2xlIjogInNlcnZpY2Vfcm9sZSIsCiAgImlzcyI6ICJzdXBhYmFzZSIsCiAgImlhdCI6IDE3MjUyMTcyMDAsCiAgImV4cCI6IDE4ODI5ODM2MDAKfQ.t9NSE2R0aeTqznXh_7WsybIBZAdm1MBCCJiHY__RuYo"
+    secret: "YBOOw3DUefhHUSgfcQvTGFGUKkIWYXswZLJrFDFf"
     # specify existing secret, which takes precedence over variables above
     secretRef: ""
     # override secret keys for existing secret refs
@@ -209,7 +209,7 @@ studio:
     STUDIO_DEFAULT_ORGANIZATION: Default Organization
     STUDIO_DEFAULT_PROJECT: Default Project
     STUDIO_PORT: "3000"
-    SUPABASE_PUBLIC_URL: http://example.com
+    SUPABASE_PUBLIC_URL: https://supa.yodai.app
     NEXT_PUBLIC_ENABLE_LOGS: "true"
     # Set value to bigquery to use Big Query backend for analytics
     NEXT_ANALYTICS_BACKEND_PROVIDER: postgres  # postgres, bigquery
@@ -287,10 +287,10 @@ auth:
     DB_PORT: 5432
     DB_DRIVER: postgres
     DB_SSL: disable  # disable, allow, prefer, require, verify-ca, verify-full
-    API_EXTERNAL_URL: http://example.com
+    API_EXTERNAL_URL: https://supa.yodai.app
     GOTRUE_API_HOST: "0.0.0.0"
     GOTRUE_API_PORT: "9999"
-    GOTRUE_SITE_URL: http://example.com
+    GOTRUE_SITE_URL: https://gotrue.yodai.app
     GOTRUE_URI_ALLOW_LIST: "*"
     GOTRUE_DISABLE_SIGNUP: "false"
     GOTRUE_JWT_DEFAULT_GROUP_NAME: authenticated
@@ -810,7 +810,7 @@ kong:
       #   hosts:
       #     - example.com
     hosts:
-      - host: example.com
+      - host: supa.yodai.app
         paths:
           - path: /
             pathType: Prefix
